check github blame history

--- a/collated/main/A0147620L.md
+++ b/collated/main/A0147620L.md
@@ -852,29 +852,16 @@ public class StringMatchUtil {
 ``` java
     @FXML
     private void handleKeyPressed(KeyEvent event) {
-        if (event.getCode() == KeyCode.ENTER) {
-            event.consume();
-            handleEnterKey();
-        } else if (event.getCode() == KeyCode.UP) {
-            // up and down arrow key will move the cursor to the position 0
-            // use consume() method to marks this Event as consumed. This stops such further propagation.
-            event.consume();
-            handleUpKey();
-        } else if (event.getCode() == KeyCode.DOWN) {
-            event.consume();
-            handleDownKey();
-        } else if (event.getCode() == KeyCode.TAB) {  // auto complete
-            event.consume();
-            completeWithSelectedSuggestion();
-        } else if (undoKeys.match(event)) {  // use control+z and control+y to execute undo and re-do operation
-            event.consume();
-            handleCtrlZKeyCombination();
-        } else if (redoKeys.match(event)) {
-            event.consume();
-            handleCtrlYKeyCombination();
+        if (navigationMode) {
+            handleKeyPressedInNavigationMode(event);
+        } else {
+            handleKeyPressedInEditingMode(event);
         }
     }
 
+```
+###### \java\seedu\doist\ui\CommandBox.java
+``` java
     //Handles Down key press
     private void handleDownKey() {
         String userCommandText = commandHistory.getNextState();
@@ -967,7 +954,7 @@ public class StringMatchUtil {
         return hour + ":" + minute + suffix;
     }
 ```
-###### \java\seedu\doist\ui\util\CommandAutoCompleteManager.java
+###### \java\seedu\doist\ui\util\CommandAutoCompleteController.java
 ``` java
     /**
      * Method to provide auto-complete suggestions for search
@@ -986,7 +973,7 @@ public class StringMatchUtil {
             return suggestions;
         }
         for (String desc : logic.getAllNames()) {
-            if ((desc.toLowerCase().contains(s.toString().toLowerCase())) && count < maxItemNu) {
+            if ((desc.toLowerCase().contains(s.toString().toLowerCase())) && count < maxItemNum) {
                 suggestions.add(desc);
                 count++;
             }
