--- a/collated/test/A0140887W.md
+++ b/collated/test/A0140887W.md
@@ -55,31 +55,6 @@ public class ChangeThemeTest extends DoistGUITest {
 ``` java
 public class FinishCommandTest extends DoistGUITest {
 
-    @Test
-    public void finish() {
-
-        //finish the first in the list
-        TestTask[] currentList = td.getTypicalTasks();
-
-        int targetIndex = 1;
-        assertFinishSuccess(targetIndex, currentList);
-
-        //finish the last in the list
-        targetIndex = currentList.length - 1;
-        assertFinishSuccess(targetIndex, currentList);
-
-        //finish from the middle of the list
-        targetIndex = currentList.length / 2;
-        assertFinishSuccess(targetIndex, currentList);
-
-        //invalid index
-        commandBox.runCommand("finish " + currentList.length + 1);
-        assertResultMessage("The task index provided is invalid");
-
-        // finish a task that has already been finished
-        assertAlreadyFinished(currentList.length, currentList);
-    }
-
 ```
 ###### \java\guitests\FinishCommandTest.java
 ``` java
@@ -109,24 +84,6 @@ public class FinishCommandTest extends DoistGUITest {
         assertResultMessage(String.format(MESSAGE_FINISH_TASK_SUCCESS, tasksToFinish));
     }
 
-    private void assertAlreadyFinished(int targetIndexOneIndexed, final TestTask[] currentList) {
-        TestTask[] expectedTasks = currentList.clone();
-        sortTasksByDefault(expectedTasks);
-        TestTask taskToFinish = expectedTasks[targetIndexOneIndexed - 1]; // -1 as array uses zero indexing
-        taskToFinish.setFinishedStatus(true);
-
-        commandBox.runCommand("finish " + targetIndexOneIndexed);
-
-        //confirm the list matching
-        assertTrue(taskListPanel.isListMatching(expectedTasks));
-
-        //confirm the result message is correct
-        ArrayList<TestTask> tasksToFinish = new ArrayList<TestTask>();
-        tasksToFinish.add(taskToFinish);
-        assertResultMessage(String.format(MESSAGE_TASK_ALREADY_FINISHED, tasksToFinish) + "\n");
-    }
-
-}
 ```
 ###### \java\guitests\guihandles\MainMenuHandle.java
 ``` java
@@ -179,6 +136,17 @@ public class LoadCommandTest extends DoistGUITest {
 
         // not a file, unable to load
         assertLoadFailure(MISSING_FILE.getAbsolutePath(), LoadCommand.MESSAGE_NOT_FILE);
+    }
+
+    @Test
+    public void loadWithEmpty() {
+        commandBox.runCommand("load ");
+        assertResultMessage(String.format(LoadCommand.MESSAGE_INVALID_PATH,
+                                            LoadCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand("load");
+        assertResultMessage(String.format(LoadCommand.MESSAGE_INVALID_PATH,
+                                              LoadCommand.MESSAGE_USAGE));
     }
 
     private void assertLoadSuccess(String path, ReadOnlyTodoList loadedList) {
@@ -237,7 +205,7 @@ public class UnfinishCommandTest extends DoistGUITest {
     }
 
     @Test
-    public void finish() {
+    public void unfinish() {
 
         //Unfinish the first in the list
         TestTask[] currentList = td.getAllFinishedTypicalTasks();
@@ -258,6 +226,17 @@ public class UnfinishCommandTest extends DoistGUITest {
 
         // Unfinish a task that is already not finished
         assertAlreadyUnfinished(1, currentList);
+    }
+
+    @Test
+    public void unfinishWithEmpty() {
+        commandBox.runCommand("unfinish ");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+                                          UnfinishCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand("unfinish");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
+                                          UnfinishCommand.MESSAGE_USAGE));
     }
 
     /**
@@ -446,6 +425,46 @@ public class PriorityTest {
         return Priority.isValidPriority(Priority.processPriorityString(str));
     }
 }
+```
+###### \java\seedu\doist\storage\StorageManagerTest.java
+``` java
+    @Test
+    public void getAliasListMapFilePath() {
+        assertNotNull(storageManager.getAliasListMapFilePath());
+    }
+
+    @Test
+    public void getUserPrefsFilePath() {
+        assertNotNull(storageManager.getUserPrefsFilePath());
+    }
+
+    @Test
+    public void setAliasListMapFilePath() {
+        storageManager.setAliasListMapFilePath("test/aliaslistmap.xml");
+        assertEquals(storageManager.getAliasListMapFilePath(), "test/aliaslistmap.xml");
+    }
+
+    @Test
+    public void setUserPrefsFilePath() {
+        storageManager.setUserPrefsFilePath("test/prefs.xml");
+        assertEquals(storageManager.getUserPrefsFilePath(), "test/prefs.xml");
+    }
+
+    @Test
+    public void setTodoListFilePath() {
+        storageManager.setTodoListFilePath("test/todolist.xml");
+        assertEquals(storageManager.getTodoListFilePath(), "test/todolist.xml");
+    }
+
+    @Test
+    public void handleAbsoluteStoragePathChangedEvent_eventRaised() {
+        storageManager.handleAbsoluteStoragePathChangedEvent(new AbsoluteStoragePathChangedEvent("todo.xml",
+                "alias.xml", "pref.xml"));
+        assertEquals(storageManager.getTodoListFilePath(), "todo.xml");
+        assertEquals(storageManager.getUserPrefsFilePath(), "pref.xml");
+        assertEquals(storageManager.getAliasListMapFilePath(), "alias.xml");
+    }
+
 ```
 ###### \java\seedu\doist\TestApp.java
 ``` java
