--- a/collated/main/A0147980U.md
+++ b/collated/main/A0147980U.md
@@ -202,6 +202,27 @@ public class DeleteCommand extends Command {
     }
 
 ```
+###### \java\seedu\doist\logic\commands\ListCommand.java
+``` java
+    public static String getSuccessMessageListUnder(String messageSuccess, UniqueTagList tagList) {
+        String message = messageSuccess + " under: ";
+        for (Tag tag : tagList) {
+            message += tag.tagName + " ";
+        }
+        message = message.trim();
+        return message;
+    }
+}
+
+
+
+
+
+
+
+
+
+```
 ###### \java\seedu\doist\logic\commands\RedoCommand.java
 ``` java
 /**
@@ -562,6 +583,32 @@ public class AliasCommandParser {
         return indices;
     }
 ```
+###### \java\seedu\doist\logic\parser\ParserUtil.java
+``` java
+    /**
+     * Parses a {@code Optional<String> priority} into an {@code Optional<Priority>} if {@code priority} is present.
+     */
+    public static Optional<Priority> parsePriority(Optional<String> priorityRawValue) throws IllegalValueException {
+        assert priorityRawValue != null;
+        return priorityRawValue.isPresent() ? Optional.of(new Priority(priorityRawValue.get())) : Optional.empty();
+    }
+```
+###### \java\seedu\doist\logic\parser\ParserUtil.java
+``` java
+    /**
+     * Parses {@code <String> parameterString} into an {@code ArrayList<String>}.
+     */
+    public static ArrayList<String> getParameterKeysFromString(String parameterString) {
+        ArrayList<String> parameterKeys = new ArrayList<String>();
+        LinkedList<String> parametersList = new LinkedList<String>(Arrays.asList(parameterString.split("\\\\")));
+        parametersList.poll();  // remove the first item, which is an empty string
+        for (String parameterPair : parametersList) {
+            String parameterKey = "\\" + parameterPair.split(" ")[0];
+            parameterKeys.add(parameterKey);
+        }
+        return parameterKeys;
+    }
+```
 ###### \java\seedu\doist\logic\parser\RemoveAliasCommandParser.java
 ``` java
 public class RemoveAliasCommandParser {
@@ -794,7 +841,113 @@ public class RemoveAliasCommandParser {
 ```
 ###### \java\seedu\doist\ui\CommandBox.java
 ``` java
-    //Handle Control + z key combination
+    private final Logic logic;
+    private final History<String> commandHistory = new History<String>();
+    private String unEnteredInput = "";
+
+    private final KeyCombination undoKeys = new KeyCodeCombination(KeyCode.Z, CONTROL_DOWN);
+    private final KeyCombination redoKeys = new KeyCodeCombination(KeyCode.Y, CONTROL_DOWN);
+
+    private CommandHighlightController highlightManager = CommandHighlightController.getInstance();
+    private CommandAutoCompleteController autoCompleteManager = CommandAutoCompleteController.getInstance();
+
+    private boolean navigationMode = false;
+    private int currentIndex = -1;
+
+    private ChangeListener<? super String> highlightListener = (observable, oldValue, newValue)
+        -> highlightAndSuggestCompletion();
+    private ChangeListener<? super String> disableInputListener = (observable, oldValue, newValue)
+        -> removeInput();
+
+    public static final String NAVIGATION_MODE_MESSAGE = "quick navigation mode\n\nj: down\nk: up";
+    public static final String EDITING_MODE_MESSAGE = "editing mode";
+
+    @FXML
+    private InlineCssTextArea commandTextField;
+
+    public CommandBox(AnchorPane commandBoxPlaceholder, Logic logic) {
+        super(FXML);
+        this.logic = logic;
+        addToPlaceholder(commandBoxPlaceholder);
+
+        commandTextField.textProperty().addListener(highlightListener);
+    }
+
+    private void highlightAndSuggestCompletion() {
+        highlightManager.highlight(commandTextField);
+        autoCompleteManager.suggestCompletion(commandTextField, logic);
+    }
+```
+###### \java\seedu\doist\ui\CommandBox.java
+``` java
+    private void handleKeyPressedInNavigationMode(KeyEvent event) {
+        event.consume();
+        if (event.getCode() == KeyCode.J) {
+            if (currentIndex + 1 < logic.getFilteredTaskList().size()) {
+                currentIndex++;
+            }
+        } else if (event.getCode() == KeyCode.K) {
+            if (currentIndex - 1 >= 0) {
+                currentIndex--;
+            }
+        } else if (event.getCode() == KeyCode.ESCAPE) {
+            currentIndex = -1;
+            turnOnEditingMode();
+        }
+        EventsCenter.getInstance().post(new JumpToListRequestEvent(currentIndex));
+    }
+
+    private void handleKeyPressedInEditingMode(KeyEvent event) {
+        if (event.getCode() == KeyCode.ESCAPE) {
+            event.consume();
+            turnOnNavigationMode();
+        } else if (event.getCode() == KeyCode.ENTER) {
+            event.consume();
+            handleEnterKey();
+        } else if (event.getCode() == KeyCode.UP) {
+            // up and down arrow key will move the cursor to the position 0
+            // use consume() method to marks this Event as consumed. This stops such further propagation.
+            event.consume();
+            handleUpKey();
+        } else if (event.getCode() == KeyCode.DOWN) {
+            event.consume();
+            handleDownKey();
+        } else if (event.getCode() == KeyCode.TAB) {  // auto complete
+            event.consume();
+            completeWithSelectedSuggestion();
+        } else if (undoKeys.match(event)) {  // use control+z and control+y to execute undo and re-do operation
+            event.consume();
+            handleCtrlZKeyCombination();
+        } else if (redoKeys.match(event)) {
+            event.consume();
+            handleCtrlYKeyCombination();
+        }
+    }
+
+    private void turnOnNavigationMode() {
+        navigationMode = true;
+        commandTextField.textProperty().removeListener(highlightListener);
+        commandTextField.textProperty().addListener(disableInputListener);
+        logger.info("turn on navigation mode");
+        raise(new NewResultAvailableEvent(NAVIGATION_MODE_MESSAGE));
+    }
+
+    private void turnOnEditingMode() {
+        navigationMode = false;
+        commandTextField.textProperty().removeListener(disableInputListener);
+        commandTextField.textProperty().addListener(highlightListener);
+        logger.info("turn on editing mode");
+        raise(new NewResultAvailableEvent(EDITING_MODE_MESSAGE));
+    }
+
+    private void removeInput() {
+        commandTextField.clear();
+    }
+
+```
+###### \java\seedu\doist\ui\CommandBox.java
+``` java
+    //Handle Control + z key combination for undo operation
     private void handleCtrlZKeyCombination() {
         try {
             CommandResult commandResult  = logic.execute(UndoCommand.DEFAULT_COMMAND_WORD);
@@ -803,7 +956,7 @@ public class RemoveAliasCommandParser {
         } catch (CommandException e) { /* DEFAULT_COMMAND_WORD will not cause exception */ }
     }
 
-    //Handle Control + y key combination
+    //Handle Control + y key combination for re-do operation
     private void handleCtrlYKeyCombination() {
         try {
             CommandResult commandResult  = logic.execute(RedoCommand.DEFAULT_COMMAND_WORD);
@@ -847,20 +1000,20 @@ public class RemoveAliasCommandParser {
     }
 
 ```
-###### \java\seedu\doist\ui\util\CommandAutoCompleteManager.java
+###### \java\seedu\doist\ui\util\CommandAutoCompleteController.java
 ``` java
-public class CommandAutoCompleteManager {
-    private static CommandAutoCompleteManager instance;
+public class CommandAutoCompleteController {
+    private static CommandAutoCompleteController instance;
     private boolean isFind = false;
 
     // relative to cursor center
     private final Point2D suggestionBoxOffset = new Point2D(-8, 12);
-    private final int maxItemNu = 8;
+    private final int maxItemNum = 8;
 
     // for singleton pattern
-    public static CommandAutoCompleteManager getInstance() {
+    public static CommandAutoCompleteController getInstance() {
         if (instance == null) {
-            instance = new CommandAutoCompleteManager();
+            instance = new CommandAutoCompleteController();
         }
         return instance;
     }
@@ -891,13 +1044,13 @@ public class CommandAutoCompleteManager {
         int count = 0;
         ArrayList<String> suggestions = new ArrayList<>();
         for (String commandWord : logic.getAllCommandWords()) {
-            if (commandWord.startsWith(lastWord) && count < maxItemNu) {
+            if (commandWord.startsWith(lastWord) && count < maxItemNum) {
                 suggestions.add(commandWord);
                 count++;
             }
         }
         for (Prefix prefix : CliSyntax.ALL_PREFICES) {
-            if (prefix.toString().startsWith(lastWord) && count < maxItemNu) {
+            if (prefix.toString().startsWith(lastWord) && count < maxItemNum) {
                 suggestions.add(prefix.toString());
                 count++;
             }
@@ -925,9 +1078,9 @@ public class CommandAutoCompleteManager {
     }
 
 ```
-###### \java\seedu\doist\ui\util\CommandHighlightManager.java
+###### \java\seedu\doist\ui\util\CommandHighlightController.java
 ``` java
-public class CommandHighlightManager {
+public class CommandHighlightController {
     public static final String COMMAND_WORD_STYLE = "-fx-fill: #1a75ff;";  // blue"
     public static final String PARAMETER_KEY_STYLE = "-fx-fill: #55ae47;";  // green
     public static final String TIME_VALUE_STYLE = "-fx-fill: #e68a00;";  // orange
@@ -935,12 +1088,12 @@ public class CommandHighlightManager {
     public static final String TAGS_STYLE = "-fx-fill: #7300e6;";  // purple
     public static final String NORMAL_STYLE = "-fx-fill: black;";
 
-    private static CommandHighlightManager instance;
+    private static CommandHighlightController instance;
 
     // for singleton pattern
-    public static CommandHighlightManager getInstance() {
+    public static CommandHighlightController getInstance() {
         if (instance == null) {
-            instance = new CommandHighlightManager();
+            instance = new CommandHighlightController();
         }
         return instance;
     }
@@ -984,6 +1137,11 @@ public class CommandHighlightManager {
 ```
 ###### \java\seedu\doist\ui\util\ContentAssistPopupWindow.java
 ``` java
+/**
+ * A window that displays the list that contains the list of word completion suggestions
+ * The position of the window will update with the cursor
+ *
+ */
 public class ContentAssistPopupWindow extends ContextMenu {
     public ContentAssistPopupWindow() {
         super();
@@ -994,6 +1152,10 @@ public class ContentAssistPopupWindow extends ContextMenu {
         this.show(inputBox, this.getAnchorX(), this.getAnchorY());
     }
 
+    /**
+     * replace the current displayed items with the input ones
+     * @param stringItems
+     */
     public void replaceItems(ArrayList<String> stringItems) {
         getItems().clear();
 
