--- a/collated/test/A0147980U.md
+++ b/collated/test/A0147980U.md
@@ -159,18 +159,29 @@ public class ContentAssistTests extends DoistGUITest {
 
     protected void assertCorrectHighlight() {
         List<String> wordsInKeyStyle =
-                commandBox.getWordListWithStyle(CommandHighlightManager.PARAMETER_KEY_STYLE);
+                commandBox.getWordListWithStyle(CommandHighlightController.PARAMETER_KEY_STYLE);
         for (String word : wordsInKeyStyle) {
             assertTrue(word.startsWith("\\"));
         }
 
         List<String> wordsInCommandWordStyle =
-                commandBox.getWordListWithStyle(CommandHighlightManager.COMMAND_WORD_STYLE);
+                commandBox.getWordListWithStyle(CommandHighlightController.COMMAND_WORD_STYLE);
         assertTrue(wordsInCommandWordStyle.size() <= 1);
         if (wordsInCommandWordStyle.size() == 1) {
             String firstWord = commandBox.getCommandInput().split(" +")[0];
             assertTrue(wordsInCommandWordStyle.get(0).equals(firstWord));
         }
+    }
+```
+###### \java\guitests\EditCommandTest.java
+``` java
+    @Test
+    public void edit_invalidValues_failure() {
+        commandBox.runCommand("edit 1 *&");
+        assertResultMessage(Description.MESSAGE_DESCRIPTION_CONSTRAINTS);
+
+        commandBox.runCommand("edit 1 \\under *&");
+        assertResultMessage(Tag.MESSAGE_TAG_CONSTRAINTS);
     }
 ```
 ###### \java\guitests\EditCommandTest.java
@@ -190,6 +201,31 @@ public class ContentAssistTests extends DoistGUITest {
 ###### \java\guitests\FinishCommandTest.java
 ``` java
     @Test
+    public void finish() {
+
+        //finish the first in the list
+        TestTask[] currentList = td.getTypicalTasks();
+
+        int targetIndex = 1;
+        assertFinishSuccess(targetIndex, currentList);
+
+        //finish the last in the list
+        targetIndex = currentList.length - 1;
+        assertFinishSuccess(targetIndex, currentList);
+
+        //finish from the middle of the list
+        targetIndex = currentList.length / 2;
+        assertFinishSuccess(targetIndex, currentList);
+
+        //invalid index
+        commandBox.runCommand("finish " + currentList.length + 1);
+        assertResultMessage("The task index provided is invalid");
+
+        // finish a task that has already been finished
+        assertAlreadyFinished(currentList.length, currentList);
+    }
+
+    @Test
     public void testFinishWithEmptyParameter() {
         commandBox.runCommand("finish ");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
@@ -201,11 +237,38 @@ public class ContentAssistTests extends DoistGUITest {
     }
 
 ```
+###### \java\guitests\FinishCommandTest.java
+``` java
+    /**
+     * Runs the finish command to finish the task at specified index
+     * and confirms the task at the specified index has already been finished before the command.
+     * @param targetIndexOneIndexed e.g. index 1 to finish the first task in the list,
+     * @param currentList A copy of the current list of tasks (before deletion).
+     */
+    private void assertAlreadyFinished(int targetIndexOneIndexed, final TestTask[] currentList) {
+        TestTask[] expectedTasks = currentList.clone();
+        sortTasksByDefault(expectedTasks);
+        TestTask taskToFinish = expectedTasks[targetIndexOneIndexed - 1]; // -1 as array uses zero indexing
+        taskToFinish.setFinishedStatus(true);
+
+        commandBox.runCommand("finish " + targetIndexOneIndexed);
+
+        //confirm the list matching
+        assertTrue(taskListPanel.isListMatching(expectedTasks));
+
+        //confirm the result message is correct
+        ArrayList<TestTask> tasksToFinish = new ArrayList<TestTask>();
+        tasksToFinish.add(taskToFinish);
+        assertResultMessage(String.format(MESSAGE_TASK_ALREADY_FINISHED, tasksToFinish) + "\n");
+    }
+
+}
+```
 ###### \java\guitests\guihandles\CommandBoxHandle.java
 ``` java
     public ContentAssistPopupWindow getContentAssistWindow() {
         InlineCssTextArea inputBox = (InlineCssTextArea) getNode(COMMAND_INPUT_FIELD_ID);
-        CommandAutoCompleteManager.getInstance().attachSuggestionWindowIfNecessary(inputBox);
+        CommandAutoCompleteController.getInstance().attachSuggestionWindowIfNecessary(inputBox);
         ContentAssistPopupWindow contentAssistWindow = (ContentAssistPopupWindow) inputBox.getPopupWindow();
         return contentAssistWindow;
     }
@@ -255,6 +318,44 @@ public class ContentAssistTests extends DoistGUITest {
 ```
 ###### \java\guitests\ListCommandTest.java
 ``` java
+public class ListCommandTest extends DoistGUITest {
+
+    @Test
+    public void testListUnderValidTagName() {
+        try {
+            commandBox.runCommand("list \\under friends");
+            UniqueTagList tagList = new UniqueTagList();
+            tagList.add(new Tag("friends"));
+            assertListUnderTags(tagList);
+        } catch (IllegalValueException exception) {
+            fail();
+        }
+    }
+
+    @Test
+    public void testListUnderInvalidTagName() {
+        commandBox.runCommand("list \\under !@#$%^");
+        assertResultMessage(Tag.MESSAGE_TAG_CONSTRAINTS);
+    }
+
+    @Test
+    public void testListFinished() {
+        commandBox.runCommand("ls finished");
+        assertListFinished();
+    }
+
+    @Test
+    public void testListPending() {
+        commandBox.runCommand("list pending");
+        assertListPending();
+    }
+
+    @Test
+    public void testListOverdue() {
+        commandBox.runCommand("list overdue");
+        assertListOverdue();
+    }
+
     @Test
     public void testInvalidParameterKey() {
         commandBox.runCommand("list \\\\wrongKey someValue");
@@ -268,6 +369,183 @@ public class ContentAssistTests extends DoistGUITest {
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
                                           ListCommand.MESSAGE_USAGE));
     }
+
+    @Test
+    public void testListFinishedUnderValidTagName() {
+        try {
+            commandBox.runCommand("list finished \\under health");
+            assertListFinished();
+            UniqueTagList tagList = new UniqueTagList();
+            tagList.add(new Tag("health"));
+            assertListUnderTags(tagList);
+            assertListFinished();
+        } catch (IllegalValueException exception) {
+            fail();
+        }
+    }
+
+    @Test
+    public void testListPendingUnderValidTagName() {
+        try {
+            commandBox.runCommand("list pending \\under health");
+            assertListFinished();
+            UniqueTagList tagList = new UniqueTagList();
+            tagList.add(new Tag("health"));
+            assertListUnderTags(tagList);
+            assertListPending();
+            assertResultMessage(ListCommand.getSuccessMessageListUnder(ListCommand.MESSAGE_PENDING, tagList));
+        } catch (IllegalValueException exception) {
+            fail();
+        }
+    }
+
+```
+###### \java\guitests\ListCommandTest.java
+``` java
+    private void assertListUnderTags(UniqueTagList tagList) {
+        List<ReadOnlyTask> displayedList = taskListPanel.getListView().getItems();
+        for (ReadOnlyTask task : displayedList) {
+            boolean doesContainAny = false;
+            for (Tag tag : tagList) {
+                if (task.getTags().contains(tag)) {
+                    doesContainAny = true;
+                }
+            }
+            assertTrue(doesContainAny);
+        }
+    }
+
+    private void assertListFinished() {
+        List<ReadOnlyTask> displayedList = taskListPanel.getListView().getItems();
+        for (ReadOnlyTask task : displayedList) {
+            assertTrue(task.getFinishedStatus().getIsFinished());
+        }
+    }
+
+    private void assertListPending() {
+        List<ReadOnlyTask> displayedList = taskListPanel.getListView().getItems();
+        for (ReadOnlyTask task : displayedList) {
+            assertTrue(!task.getFinishedStatus().getIsFinished() && !task.getDates().isPast());
+        }
+    }
+```
+###### \java\guitests\ModeTest.java
+``` java
+public class ModeTest extends DoistGUITest {
+
+    @Test
+    public void testEditingModeAfterLaunch() {
+        assertInEditingMode();
+    }
+
+    @Test
+    public void testTurnOnNavigationMode() {
+        typeEsc();
+        assertInNavigationMode();
+    }
+
+    @Test
+    public void testTurnOnNavigationModeThenTurnOnEditingMode() {
+        typeEsc();
+        assertInNavigationMode();
+
+        typeEsc();
+        assert getMessageBoxContent().equals(CommandBox.EDITING_MODE_MESSAGE);
+        assertInEditingMode();
+    }
+
+    @Test
+    public void testStartingFromIndexZero() {
+        typeEsc();  // turn on navigation mode
+        typeJ();
+        assertTaskSelected(1);
+    }
+
+    @Test
+    public void testPressJToScrollDown() {
+        typeEsc();
+        int count = taskListPanel.getNumberOfTasks();
+        for (int i = 0; i < count; i++) {
+            typeJ();
+            assertTaskSelected(i + 1);
+        }
+
+        // already scroll to the bottom
+        typeJ();
+        assertTaskSelected(count);
+    }
+
+    @Test
+    public void testPressKToScrollUp() {
+        testPressJToScrollDown();
+        int count = taskListPanel.getNumberOfTasks();
+        for (int i = count - 1; i >= 1; i--) {
+            typeK();
+            assertTaskSelected(i);
+        }
+
+        // already scroll to the top
+        typeK();
+        assertTaskSelected(1);
+    }
+
+    // helper method for testing
+    private void assertInNavigationMode() {
+        assert getMessageBoxContent().equals(CommandBox.NAVIGATION_MODE_MESSAGE);
+        commandBox.enterCommand("some random input");
+        System.out.println(getInputBoxContent());
+        assert getInputBoxContent().length() == 0;
+    }
+
+    private void assertInEditingMode() {
+        assert !getMessageBoxContent().equals(CommandBox.NAVIGATION_MODE_MESSAGE);
+        String input = "some randome input";
+        commandBox.enterCommand(input);
+        assert getInputBoxContent().equals(input);
+    }
+
+    private String getInputBoxContent() {
+        return commandBox.getCommandInput();
+    }
+
+    private String getMessageBoxContent() {
+        return resultDisplay.getText();
+    }
+
+    private void typeEsc() {
+        GuiRobot bot = new GuiRobot();
+        bot.press(KeyCode.ESCAPE);
+        bot.release(KeyCode.ESCAPE);
+    }
+
+    private void typeJ() {
+        GuiRobot bot = new GuiRobot();
+        bot.press(KeyCode.J);
+        bot.release(KeyCode.J);
+    }
+
+    private void typeK() {
+        GuiRobot bot = new GuiRobot();
+        bot.press(KeyCode.K);
+        bot.release(KeyCode.K);
+    }
+
+    private void assertTaskSelected(int index) {
+        assertEquals(taskListPanel.getSelectedTasks().size(), 1);
+        ReadOnlyTask selectedTask = taskListPanel.getSelectedTasks().get(0);
+        assertEquals(taskListPanel.getTask(index - 1), selectedTask);
+    }
+}
+
+
+
+
+
+
+
+
+
+
 ```
 ###### \java\guitests\RemoveAliasCommandTests.java
 ``` java
