--- a/collated/main/A0140887W.md
+++ b/collated/main/A0140887W.md
@@ -1923,9 +1923,17 @@ public class TaskCard extends UiPart<Region> {
         setStyleToNormal();
         desc.setText(task.getDescription().desc);
         id.setText(displayedIndex + ". ");
-        priority.setText(task.getPriority().toString());
 
-        // Times
+        initTime(task);
+        initCheckbox(task);
+        initPriority(task);
+        initTags(task);
+    }
+
+    /**
+     * Initialise time appearance on task card
+     */
+    private void initTime(ReadOnlyTask task) {
         if (task.getDates().isDeadline()) {
             startTime.setText(BY_TIME_TEXT + prettyDate(task.getDates().getStartDate()));
             endTime.setText("");
@@ -1940,9 +1948,15 @@ public class TaskCard extends UiPart<Region> {
         if (task.getDates().isPast()) {
             setStyleToOverdue();
         }
+    }
 
-        // Finished
+    /**
+     * Initialise checkbox to be marked or unmarked
+     */
+    private void initCheckbox(ReadOnlyTask task) {
+        // Don't allow user to mark or unmark checkbox
         checkbox.setDisable(true);
+        // Disabled but opacity is force set to 1
         checkbox.setStyle("-fx-opacity: 1");
         if (task.getFinishedStatus().getIsFinished()) {
             checkbox.setSelected(true);
@@ -1950,8 +1964,13 @@ public class TaskCard extends UiPart<Region> {
         } else {
             checkbox.setSelected(false);
         }
+    }
 
-        //Importance
+    /**
+     * Initialise priority to show text and the stars
+     */
+    private void initPriority(ReadOnlyTask task) {
+        priority.setText(task.getPriority().toString());
         if (task.getPriority().getPriorityLevel().equals(Priority.PriorityLevel.NORMAL)) {
             // Disable both stars
             star1.setImage(null);
@@ -1960,9 +1979,6 @@ public class TaskCard extends UiPart<Region> {
             // Disable one star
             star2.setImage(null);
         }
-
-        // Tags
-        initTags(task);
     }
 
     private void initTags(ReadOnlyTask task) {
