--- a/collated/main/A0164212U.md
+++ b/collated/main/A0164212U.md
@@ -47,6 +47,7 @@ public class IllegalTimingOrderException extends Exception {
                 new RecurringFrequency(recurFreq)
                 );
         if (!Timing.checkTimingOrder(toAdd.getStartTiming(), toAdd.getEndTiming())) {
+            logger.warning("Timing is not in the correct order");
             throw new IllegalTimingOrderException(MESSSAGE_INVALID_TIMING_ORDER);
         }
     }
@@ -112,6 +113,7 @@ public class IllegalTimingOrderException extends Exception {
             try {
                 deleteOccurrence = Task.extractOccurrence(taskToDelete);
                 model.deleteThisTask(taskToDelete, taskToAdd);
+                logger.info("Deleting specific instance of recurring task");
                 return new CommandResult(String.format(MESSAGE_DELETE_TASK_SUCCESS, deleteOccurrence));
             } catch (DuplicateTaskException e) {
                 throw new CommandException(AddCommand.MESSAGE_DUPLICATE_TASK);
@@ -153,6 +155,7 @@ public class IllegalTimingOrderException extends Exception {
                 ReadOnlyTask copyRecurTask = new Task(taskToEdit);
                 editedTask = createEditedTask(newTask, editTaskDescriptor);
                 model.updateThisTask(filteredTaskListIndex, copyRecurTask, editedTask);
+                logger.info("Editing a specific occurrence of a recurring task");
             } else {
                 editedTask = createEditedTask(taskToEdit, editTaskDescriptor);
                 model.updateTask(filteredTaskListIndex, editedTask);
@@ -310,6 +313,9 @@ public class Priority implements Comparable<Priority> {
 ``` java
 package seedu.task.model.task;
 
+import java.util.logging.Logger;
+
+import seedu.task.commons.core.LogsCenter;
 import seedu.task.commons.exceptions.IllegalValueException;
 
 /**
@@ -317,8 +323,9 @@ import seedu.task.commons.exceptions.IllegalValueException;
  * Guarantees: immutable; is valid as declared in {@link #isValidFrequency(String)}
  */
 public class RecurringFrequency {
+    private static final Logger logger = LogsCenter.getLogger(RecurringFrequency.class);
 
-    public static final String MESSAGE_DESCRIPTION_CONSTRAINTS =
+    public static final String MESSAGE_FREQUENCY_CONSTRAINTS =
             "Frequency must be a number followerd by d (day), m (month), y (year) no spaces";
 
     public static final String FREQUENCY_VALIDATION_REGEX = "^[0-9]+[ydmHDY]";
@@ -339,10 +346,12 @@ public class RecurringFrequency {
         if (frequency != null) {
             String trimmedFrequency = frequency.trim();
             if (!isValidFrequency(trimmedFrequency)) {
-                throw new IllegalValueException(MESSAGE_DESCRIPTION_CONSTRAINTS);
+                logger.severe("Invalid value for frequency...");
+                throw new IllegalValueException(MESSAGE_FREQUENCY_CONSTRAINTS);
             }
             this.frequency = trimmedFrequency;
         } else {
+            logger.info("Setting frequency to default value...");
             this.frequency = NULL_FREQUENCY;
         }
     }
@@ -447,7 +456,9 @@ import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Comparator;
 import java.util.Objects;
+import java.util.logging.Logger;
 
+import seedu.task.commons.core.LogsCenter;
 import seedu.task.commons.exceptions.IllegalValueException;
 import seedu.task.commons.util.CollectionUtil;
 import seedu.task.model.tag.UniqueTagList;
@@ -457,6 +468,7 @@ import seedu.task.model.tag.UniqueTagList;
  * null, field values are validated.
  */
 public class Task implements ReadOnlyTask, Comparable<Task> {
+    private static final Logger logger = LogsCenter.getLogger(Task.class);
 
     private Description description;
     private Priority priority;
@@ -695,9 +707,11 @@ public class Task implements ReadOnlyTask, Comparable<Task> {
      * @throws IllegalValueException
      */
     public void setOccurrences(Timing initialStartTime, Timing initialEndTime) throws IllegalValueException {
+        logger.info("Setting initial occurrence...");
         this.occurrences.add(new RecurringTaskOccurrence(initialStartTime, initialEndTime));
         if (isRecurring()) {
             if (initialStartTime.timing == null || initialEndTime.timing == null) {
+                logger.severe("Start or End timing not specified for recurring task");
                 throw new IllegalValueException(MESSAGE_MISSING_TIMING);
             }
             String freqCharacter = frequency.getFrequencyCharacter();
