--- a/collated/main/A0164212U.md
+++ b/collated/main/A0164212U.md
@@ -59,7 +59,6 @@ public class IllegalTimingOrderException extends Exception {
 ``` java
     @Override
     public CommandResult execute() throws CommandException {
-
         UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
         if (lastShownList.size() <= targetIndex) {
             throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
@@ -78,12 +77,14 @@ public class IllegalTimingOrderException extends Exception {
                 completedTask.setComplete();
                 model.updateTask(newIndex, completedTask);
                 model.updateFilteredListToShowAll();
+                logger.info(MESSAGE_COMPLETE_TASK_SUCCESS);
                 return new CommandResult(String.format(MESSAGE_COMPLETE_TASK_SUCCESS, newTask));
             } else {
                 completedTask = createCompletedTask(taskToComplete, completeTaskDescriptor);
                 completedTask.setComplete();
                 model.updateTask(targetIndex, completedTask);
                 model.updateFilteredListToShowAll();
+                logger.info(MESSAGE_COMPLETE_TASK_SUCCESS);
                 return new CommandResult(String.format(MESSAGE_COMPLETE_TASK_SUCCESS, taskToComplete));
             }
         } catch (UniqueTaskList.DuplicateTaskException dpe) {
@@ -149,7 +150,6 @@ public class IllegalTimingOrderException extends Exception {
         try {
             if (isSpecific) {
                 newTask = Task.extractOccurrence(taskToEdit);
-                model.addTask(newTask);
                 ReadOnlyTask copyRecurTask = new Task(taskToEdit);
                 editedTask = createEditedTask(newTask, editTaskDescriptor);
                 model.updateThisTask(filteredTaskListIndex, copyRecurTask, editedTask);
@@ -166,6 +166,7 @@ public class IllegalTimingOrderException extends Exception {
         }
 
         model.updateFilteredListToShowAll();
+        logger.info(String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit));
         return new CommandResult(String.format(MESSAGE_EDIT_TASK_SUCCESS, taskToEdit));
     }
 ```
@@ -223,7 +224,7 @@ package seedu.task.model.task;
 import seedu.task.commons.exceptions.IllegalValueException;
 
 /**
- * Represents a Task's priority number in the address book.
+ * Represents a Task's priority number in the Task Manager.
  * A smaller priority number indicates a higher priority.
  * Guarantees: immutable; is valid as declared in {@link #isValidPriority(String)}
  */
@@ -244,7 +245,7 @@ public class Priority implements Comparable<Priority> {
     /**
      * Validates given priority number.
      *
-     * @throws IllegalValueException if given phone string is invalid.
+     * @throws IllegalValueException if given priority string is invalid.
      */
     public Priority(String priority) throws IllegalValueException {
         if (priority != null) {
@@ -453,7 +454,7 @@ import seedu.task.commons.util.CollectionUtil;
 import seedu.task.model.tag.UniqueTagList;
 
 /**
- * Represents a Task in the ToDo List. Guarantees: details are present and not
+ * Represents a Task in the Task Manager. Guarantees: details are present and not
  * null, field values are validated.
  */
 public class Task implements ReadOnlyTask, Comparable<Task> {
@@ -823,7 +824,7 @@ import java.util.Date;
 import seedu.task.commons.exceptions.IllegalValueException;
 
 /**
- * Represents a Task's timing in the address book. Guarantees: immutable; is valid
+ * Represents a Task's timing in the Task Manager. Guarantees: immutable; is valid
  * as declared in {@link #isValidTiming(String)}
  */
 public class Timing implements Comparable<Timing> {
