--- a/collated/main/A0113795Y.md
+++ b/collated/main/A0113795Y.md
@@ -8,7 +8,9 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.logging.Logger;
 
+import seedu.task.commons.core.LogsCenter;
 import seedu.task.commons.core.Messages;
 import seedu.task.commons.core.UnmodifiableObservableList;
 import seedu.task.commons.exceptions.IllegalValueException;
@@ -29,7 +31,7 @@ import seedu.task.model.task.UniqueTaskList;
  */
 
 public class CompleteCommand extends Command {
-
+    private static final Logger logger = LogsCenter.getLogger(CompleteCommand.class);
     public static final String COMMAND_WORD = "complete";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Mark the task identified by the index number."
@@ -110,7 +112,9 @@ public class CompleteCommand extends Command {
 package seedu.task.logic.commands;
 
 import java.util.Optional;
+import java.util.logging.Logger;
 
+import seedu.task.commons.core.LogsCenter;
 import seedu.task.commons.core.Messages;
 import seedu.task.commons.core.UnmodifiableObservableList;
 import seedu.task.commons.exceptions.IllegalValueException;
@@ -126,6 +130,7 @@ import seedu.task.model.task.Timing;
 import seedu.task.model.task.UniqueTaskList;
 
 public class PrioritizeCommand extends Command {
+    private static final Logger logger = LogsCenter.getLogger(PrioritizeCommand.class);
     public static final String COMMAND_WORD = "prioritize";
     public static final String MESSAGE_PRIORITY_CONSTRAINTS = "Task priority should be between 1-3";
 
@@ -157,6 +162,7 @@ public class PrioritizeCommand extends Command {
 
         UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
         if (lastShownList.size() <= targetIndex) {
+            logger.info(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
             throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
         }
 
@@ -166,10 +172,12 @@ public class PrioritizeCommand extends Command {
         try {
             model.updateTask(targetIndex, completedTask);
         } catch (UniqueTaskList.DuplicateTaskException dpe) {
+            logger.info(MESSAGE_DUPLICATE_TASK);
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
         }
 
         model.updateFilteredListToShowAll();
+        logger.info(String.format(MESSAGE_PRIORITIZE_TASK_SUCCESS, taskToComplete));
         return new CommandResult(String.format(MESSAGE_PRIORITIZE_TASK_SUCCESS, taskToComplete));
     }
 
@@ -205,14 +213,16 @@ public class PrioritizeCommand extends Command {
 package seedu.task.logic.commands;
 
 import java.util.EmptyStackException;
+import java.util.logging.Logger;
 
+import seedu.task.commons.core.LogsCenter;
 import seedu.task.logic.commands.exceptions.CommandException;
 
 /**
- * Redo the previous change undone
+ * Redo the previous change undone to the Task Manager
  */
 public class RedoCommand extends Command {
-
+    private static final Logger logger = LogsCenter.getLogger(RedoCommand.class);
     public static final String COMMAND_WORD = "redo";
     public static final String MESSAGE_SUCCESS = "Preivous undo restored.";
     public static final String MESSAGE_INVALID_REDO_COMMAND = "Nothing to redo!";
@@ -223,8 +233,10 @@ public class RedoCommand extends Command {
         try {
             model.redo();
         } catch (EmptyStackException ese) {
+            logger.info(MESSAGE_INVALID_REDO_COMMAND);
             throw new CommandException(MESSAGE_INVALID_REDO_COMMAND);
         }
+        logger.info(MESSAGE_SUCCESS);
         return new CommandResult(MESSAGE_SUCCESS);
     }
 }
@@ -234,14 +246,16 @@ public class RedoCommand extends Command {
 package seedu.task.logic.commands;
 
 import java.util.EmptyStackException;
+import java.util.logging.Logger;
 
+import seedu.task.commons.core.LogsCenter;
 import seedu.task.logic.commands.exceptions.CommandException;
 
 /**
- * Undo the previous change to the TaskList
+ * Undo the previous change to the Task Manager
  */
 public class UndoCommand extends Command {
-
+    private static final Logger logger = LogsCenter.getLogger(UndoCommand.class);
     public static final String COMMAND_WORD = "undo";
     public static final String MESSAGE_SUCCESS = "Previous change is undone";
     public static final String MESSAGE_INVALID_UNDO_COMMAND = "Nothing to undo!";
@@ -252,8 +266,10 @@ public class UndoCommand extends Command {
         try {
             model.undo();
         } catch (EmptyStackException ese) {
+            logger.info(MESSAGE_INVALID_UNDO_COMMAND);
             throw new CommandException(MESSAGE_INVALID_UNDO_COMMAND);
         }
+        logger.info(MESSAGE_SUCCESS);
         return new CommandResult(MESSAGE_SUCCESS);
     }
 }
