almost done with collating

--- a/collated/main/A0147980U.md
+++ b/collated/main/A0147980U.md
@@ -2,6 +2,20 @@
 ###### \java\seedu\doist\commons\util\History.java
 ``` java
     /**
+     * Method that returns the previous state entered by user
+     * Return null if history is empty
+     */
+    public S getPreviousState() {
+        try {
+            S previousState = history.pop();
+            overflow.push(previousState);
+            return previousState;
+        } catch (EmptyStackException e) {
+            return null;
+        }
+    }
+
+    /**
      * Method that returns the next state entered by the user, if it exists
      * Returns null if overflow is empty
      */
@@ -103,6 +117,14 @@ public class AliasCommand extends Command {
     }
 }
 ```
+###### \java\seedu\doist\logic\commands\CommandResult.java
+``` java
+    public CommandResult(String feedbackToUser, boolean isMutating) {
+        this(feedbackToUser);
+        this.isMutating = isMutating;
+    }
+}
+```
 ###### \java\seedu\doist\logic\commands\DeleteCommand.java
 ``` java
 /**
@@ -152,6 +174,12 @@ public class DeleteCommand extends Command {
             return priority;
         }
 ```
+###### \java\seedu\doist\logic\commands\HelpCommand.java
+``` java
+    public static final String MESSAGE_USAGE = DEFAULT_COMMAND_WORD
+            + ": Shows program usage instructions.\n"
+            + "Example: " + DEFAULT_COMMAND_WORD;
+```
 ###### \java\seedu\doist\logic\commands\ListCommand.java
 ``` java
     public enum TaskType {
@@ -160,47 +188,19 @@ public class DeleteCommand extends Command {
         OVERDUE,
         ALL
     }
+
 ```
 ###### \java\seedu\doist\logic\commands\ListCommand.java
 ``` java
-    private UniqueTagList tagList = new UniqueTagList();
-    private TaskType type = null;
-    private TaskDate dates = null;
-
-    public ListCommand(String preamble, Map<String, List<String>> parameters) throws IllegalValueException {
-        if (!preamble.trim().isEmpty()) {
-            String processedPreamble = processListPreamble(preamble);
-            // pending, overdue or finished
-            try {
-                type = TaskType.valueOf(processedPreamble);
-            } catch (IllegalArgumentException e) {
-                throw new IllegalValueException(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
-                                                              MESSAGE_USAGE));
-            }
-        } else {
-            listDefault();
+    public static String getSuccessMessageListUnder(String messageSuccess, UniqueTagList tagList) {
+        String message = messageSuccess + " under: ";
+        for (Tag tag : tagList) {
+            message += tag.tagName + " ";
         }
-
-        if (!parameters.isEmpty()) {
-            try {
-                String startDate = parameters.get(CliSyntax.PREFIX_FROM.toString()).toString();
-                String endDate = parameters.get(CliSyntax.PREFIX_TO.toString()).toString();
-                dates = new TaskDate(TaskDate.parseDate(startDate), TaskDate.parseDate(endDate));
-                boolean validDate = TaskDate.validateDate(dates.getStartDate(), dates.getEndDate());
-                if (!validDate) {
-                    throw new IllegalValueException(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
-                            MESSAGE_USAGE));
-                }
-            } catch (NullPointerException e) {
-
-            }
-        }
-        List<String> tagsParameterStringList = parameters.get(CliSyntax.PREFIX_UNDER.toString());
-        if (tagsParameterStringList != null && !tagsParameterStringList.isEmpty()) {
-            tagList = ParserUtil.parseTagsFromString(tagsParameterStringList.get(0));
-        }
+        message = message.trim();
+        return message;
     }
-
+}
 ```
 ###### \java\seedu\doist\logic\commands\ListCommand.java
 ``` java
@@ -364,6 +364,9 @@ public class ViewAliasCommand extends Command {
 ```
 ###### \java\seedu\doist\logic\Logic.java
 ``` java
+    /** Returns the filtered list of tasks */
+    ObservableList<ReadOnlyTask> getFilteredTaskList();
+
     /**
      * This method is used for auto completion in UI component
      * It is defined in Logic component rather than in Model component to
@@ -460,6 +463,42 @@ public class AliasCommandParser {
         PREFIX_IN,
         PREFIX_FOR
     };
+}
+```
+###### \java\seedu\doist\logic\parser\ListCommandParser.java
+``` java
+public class ListCommandParser {
+    private static final Pattern LIST_COMMAND_REGEX = Pattern.compile("(?<preamble>[^\\\\]*)" +
+                                                                      "(?<parameters>((\\\\)(\\S+)(\\s+)([^\\\\]*))*)");
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the ListCommand
+     * and returns an ListCommand object for execution.
+     */
+    public Command parse(String args) {
+        final Matcher matcher = LIST_COMMAND_REGEX.matcher(args.trim());
+
+        if (!matcher.matches()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
+        }
+        final String argument = matcher.group("preamble");
+        final String parameters = matcher.group("parameters").trim();
+        ArrayList<String> tokens = ParserUtil.getParameterKeysFromString(parameters);
+
+        ArgumentTokenizer argsTokenizer = new ArgumentTokenizer(PREFIX_UNDER, PREFIX_FROM, PREFIX_TO);
+
+        if (!argsTokenizer.validateTokens(tokens) ||
+                (argsTokenizer.validateDate(tokens) == ArgumentTokenizer.DATE_INVALID)) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
+        }
+        argsTokenizer.tokenize(parameters);
+
+        try {
+            return new ListCommand(argument, argsTokenizer.getTokenizedArguments());
+        } catch (IllegalValueException ive) {
+            return new IncorrectCommand(ive.getMessage());
+        }
+    }
 }
 ```
 ###### \java\seedu\doist\logic\parser\Parser.java
@@ -731,33 +770,72 @@ public class RemoveAliasCommandParser {
     }
 
 ```
+###### \java\seedu\doist\model\AliasListMapManager.java
+``` java
+    @Override
+    public List<String> getValidCommandList(String defaultCommandWord) {
+        List<String> list = new ArrayList<String>(aliasListMap.getAliasList(defaultCommandWord));
+        list.add(defaultCommandWord);
+        return list;
+    }
+
+    @Override
+    public Set<String> getDefaultCommandWordSet() {
+        return aliasListMap.getDefaultCommandWordSet();
+    }
+
+    @Override
+    public void resetToDefaultCommandWords() {
+        aliasListMap.setDefaultAliasListMapping();
+    }
+
+    /** Raises an event to indicate the alias list model has changed */
+    private void indicateAliasListMapChanged() {
+        raise(new AliasListMapChangedEvent(aliasListMap));
+    }
+}
+```
 ###### \java\seedu\doist\model\ModelManager.java
 ``` java
-    //=========== TodoList =============================================================
-
     @Override
-    public void resetData(ReadOnlyTodoList newData) {
-        todoList.resetData(newData);
-        sortTasksByDefault();
-        indicateTodoListChanged();
+    public void updateFilteredTaskList(TaskType type, UniqueTagList tags, TaskDate dates) {
+        ArrayList<Qualifier> qualifiers = new ArrayList<Qualifier>();
+        if (type != null) {
+            qualifiers.add(new TaskTypeQualifier(type));
+        }
+        if (!tags.isEmpty()) {
+            qualifiers.add(new TagQualifier(tags));
+        }
+        if (dates != null) {
+            qualifiers.add(new DateQualifier(dates));
+        }
+        updateFilteredTaskList(new PredicateExpression(qualifiers.toArray(new Qualifier[qualifiers.size()])));
     }
+```
+###### \java\seedu\doist\model\ModelManager.java
+``` java
+    private class PredicateExpression implements Expression {
 
-    @Override
-    public ReadOnlyTodoList getTodoList() {
-        return todoList;
+        private final Qualifier[] qualifiers;
+
+        PredicateExpression(Qualifier[] qualifiers) {
+            this.qualifiers = qualifiers;
+        }
+
+        @Override
+        public boolean satisfies(ReadOnlyTask task) {
+            boolean isSatisfied = true;
+            for (Qualifier qualifier : qualifiers) {
+                isSatisfied = isSatisfied && qualifier.run(task);
+            }
+            return isSatisfied;
+        }
+
+        @Override
+        public String toString() {
+            return qualifiers.toString();
+        }
     }
-
-    /** Raises an event to indicate the model has changed */
-    private void indicateTodoListChanged() {
-        raise(new TodoListChangedEvent(todoList));
-    }
-
-    @Override
-    public synchronized void deleteTask(ReadOnlyTask target) throws TaskNotFoundException {
-        todoList.removeTask(target);
-        indicateTodoListChanged();
-    }
-
 ```
 ###### \java\seedu\doist\model\ModelManager.java
 ``` java
@@ -836,6 +914,13 @@ public class RemoveAliasCommandParser {
         }
         indicateTodoListChanged();
         return true;
+    }
+}
+```
+###### \java\seedu\doist\model\tag\UniqueTagList.java
+``` java
+    public boolean isEmpty() {
+        return internalList.isEmpty();
     }
 }
 ```
