--- a/collated/test/A0147980U.md
+++ b/collated/test/A0147980U.md
@@ -316,6 +316,14 @@ public class ContentAssistTests extends DoistGUITest {
 
 
 ```
+###### \java\guitests\guihandles\GuiHandleSetting.java
+``` java
+public class GuiHandleSetting {
+    public static final int COMMAND_RUN_TIME = 80;
+    public static final int SLEEP_LENGTH = 50;
+    public static final int LONG_SLEEP_LENGTH = 600;
+}
+```
 ###### \java\guitests\ListCommandTest.java
 ``` java
 public class ListCommandTest extends DoistGUITest {
