--- a/collated/main/A0139975J.md
+++ b/collated/main/A0139975J.md
@@ -1,6 +1,9 @@
 # A0139975J
 ###### /java/seedu/task/logic/commands/DoneCommand.java
 ``` java
+/**
+ * Update the status of the task to done using the index to identity the specific task.
+ */
 public class DoneCommand extends Command {
 
     public static final String COMMAND_WORD_1 = "done";
@@ -38,7 +41,7 @@ public class DoneCommand extends Command {
 ###### /java/seedu/task/logic/commands/ListCommand.java
 ``` java
 /**
- * Lists all task in KIT to the user.
+ * Lists all task in KIT to the user. Able to either list all task, all done task,all undone task or list by tag.
  */
 public class ListCommand extends Command {
 
@@ -103,6 +106,9 @@ public class ListCommand extends Command {
 ```
 ###### /java/seedu/task/logic/commands/UndoneCommand.java
 ``` java
+/**
+ * Update the status of the task to not done/undone using the index to identity the specific task.
+ */
 public class UndoneCommand extends Command {
 
     public static final String COMMAND_WORD_1 = "undone";
@@ -298,6 +304,11 @@ public class UndoneCommandParser extends CommandParser {
 ```
 ###### /java/seedu/task/model/task/UniqueTaskList.java
 ``` java
+    /**
+     * Set Target Task to done.
+     *
+     * @param index  Target task to be set to done
+     */
     public void done(int index) {
         Task taskDone = internalList.get(index);
         taskDone.setIsDone(true);
@@ -307,6 +318,11 @@ public class UndoneCommandParser extends CommandParser {
 ```
 ###### /java/seedu/task/model/task/UniqueTaskList.java
 ``` java
+    /**
+     * Set Target Task to undone.
+     *
+     * @param index  Target task to be set to undone
+     */
     public void undone(int index) {
         Task taskUnDone = internalList.get(index);
         taskUnDone.setIsDone(false);
@@ -316,6 +332,10 @@ public class UndoneCommandParser extends CommandParser {
 ```
 ###### /java/seedu/task/model/TaskManager.java
 ``` java
+    /**
+     *
+     * @param index Target task to update to done.
+     */
     public void updateDone(int index) {
         tasks.done(index);
     }
@@ -323,6 +343,10 @@ public class UndoneCommandParser extends CommandParser {
 ```
 ###### /java/seedu/task/model/TaskManager.java
 ``` java
+    /**
+     *
+     * @param index Target task to update to undone.
+     */
     public void updateUnDone(int index) {
         tasks.undone(index);
     }
