--- a/collated/main/A0147980U.md
+++ b/collated/main/A0147980U.md
@@ -57,10 +57,26 @@
 ```
 ###### \java\seedu\doist\logic\commands\AddCommand.java
 ``` java
-/**
- * Adds a task to the to-do list.
- */
-public class AddCommand extends Command {
+    @Override
+    public CommandResult execute() throws CommandException {
+        assert model != null;
+        try {
+            int index  = model.addTask(newTask);
+            if (index >= 0) {
+                EventsCenter.getInstance().post(new JumpToListRequestEvent(index));
+            }
+            return new CommandResult(String.format(MESSAGE_SUCCESS, newTask), true);
+        } catch (UniqueTaskList.DuplicateTaskException e) {
+            throw new CommandException(MESSAGE_DUPLICATE_TASK);
+        }
+    }
+}
+
+
+
+
+
+
 ```
 ###### \java\seedu\doist\logic\commands\AliasCommand.java
 ``` java
@@ -90,8 +106,10 @@ public class AliasCommand extends Command {
     @Override
     public CommandResult execute() throws CommandException {
         if (!aliasModel.getDefaultCommandWordSet().contains(defaultCommandWord)) {
+            // the target command word does not exist
             throw new CommandException(String.format(MESSAGE_COMMAND_WORD_NOT_EXIST, defaultCommandWord));
         } else if (aliasModel.getDefaultCommandWordSet().contains(alias)) {
+            // the alias is a default command word
             throw new CommandException(String.format(MESSAGE_ALIAS_IS_DEFAULT_COMMAND_WORD, alias));
         } else {
             aliasModel.setAlias(alias, defaultCommandWord);
@@ -195,19 +213,7 @@ public class DeleteCommand extends Command {
     public static String getSuccessMessageListUnder(String messageSuccess, UniqueTagList tagList) {
         String message = messageSuccess + " under: ";
         for (Tag tag : tagList) {
-            message += tag.tagName + " ";
-        }
-        message = message.trim();
-        return message;
-    }
-}
-```
-###### \java\seedu\doist\logic\commands\ListCommand.java
-``` java
-    public static String getSuccessMessageListUnder(String messageSuccess, UniqueTagList tagList) {
-        String message = messageSuccess + " under: ";
-        for (Tag tag : tagList) {
-            message += tag.tagName + " ";
+            message = message + tag.tagName + " ";
         }
         message = message.trim();
         return message;
@@ -239,11 +245,11 @@ public class RedoCommand extends Command {
     @Override
     public CommandResult execute() {
         assert model != null;
-        int i = 0;
-        while (i < numSteps && model.recoverNextTodoList()) {
-            i++;
+        int redoCount = 0;
+        while (redoCount < numSteps && model.recoverNextTodoList()) {
+            redoCount++;
         }
-        return new CommandResult(String.format(MESSAGE_REDO_SUCCESS, i));
+        return new CommandResult(String.format(MESSAGE_REDO_SUCCESS, redoCount));
     }
 
     public RedoCommand(int numSteps) {
@@ -274,7 +280,8 @@ public class RemoveAliasCommand extends Command {
 
     @Override
     public CommandResult execute() throws CommandException {
-        for (ArrayList<String> aliasList : aliasModel.getAliasListMap().getAliasListMapping().values()) {
+        Collection<ArrayList<String>> allAliasLists = aliasModel.getAliasListMap().getAliasListMapping().values();
+        for (ArrayList<String> aliasList : allAliasLists) {
             if (aliasList.contains(alias)) {
                 aliasModel.removeAlias(alias);
                 return new CommandResult(String.format(MESSAGE_SUCCESS, alias));
@@ -318,11 +325,11 @@ public class UndoCommand extends Command {
     @Override
     public CommandResult execute() {
         assert model != null;
-        int i = 0;
-        while (i < numSteps && model.recoverPreviousTodoList()) {
-            i++;
+        int undoCount = 0;
+        while (undoCount < numSteps && model.recoverPreviousTodoList()) {
+            undoCount++;
         }
-        return new CommandResult(String.format(MESSAGE_UNDO_SUCCESS, i));
+        return new CommandResult(String.format(MESSAGE_UNDO_SUCCESS, undoCount));
     }
 
     public UndoCommand(int numSteps) {
@@ -348,10 +355,14 @@ public class ViewAliasCommand extends Command {
         Set<String> allCommandWords = aliasModel.getDefaultCommandWordSet();
         StringBuilder sb = new StringBuilder();
         for (String word: allCommandWords) {
+            // start with command word
             sb.append(word + ": ");
+
+            // append aliases one after another
             for (String alias : aliasModel.getAliasList(word)) {
                 sb.append(alias + ", ");
             }
+
             // remove the comma after the last alias
             if (sb.charAt(sb.length() - 2) == ',') {
                 sb.deleteCharAt(sb.length() - 2);
@@ -440,6 +451,8 @@ public class AliasCommandParser {
                 throw new IllegalValueException(String.format(MESSAGE_COMMAND_WORD_NOT_SPECIFIED,
                                                     AliasCommand.MESSAGE_USAGE));
             }
+
+            // only alphabets and underscores are allowed
             if (!preamble.matches("[a-zA-Z_]+")) {
                 throw new IllegalValueException(String.format(MESSAGE_ALIAS_FORMAT_INVALID,
                                                     AliasCommand.MESSAGE_USAGE));
@@ -488,7 +501,7 @@ public class ListCommandParser {
         ArgumentTokenizer argsTokenizer = new ArgumentTokenizer(PREFIX_UNDER, PREFIX_FROM, PREFIX_TO);
 
         if (!argsTokenizer.validateTokens(tokens) ||
-                (argsTokenizer.validateDate(tokens) == ArgumentTokenizer.DATE_INVALID)) {
+            argsTokenizer.validateDate(tokens) == ArgumentTokenizer.DATE_INVALID) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
         }
         argsTokenizer.tokenize(parameters);
@@ -517,7 +530,13 @@ public class ListCommandParser {
 
         final String commandWord = matcher.group("commandWord");
         final String arguments = matcher.group("arguments");
+        return constructCommand(commandWord, arguments);
+    }
 
+    /**
+     * Construct and return a command according to the specified command word and arguments.
+     */
+    private Command constructCommand(String commandWord, String arguments) {
         if (doesTriggerSameCommand(commandWord, AddCommand.DEFAULT_COMMAND_WORD)) {
             return new AddCommandParser().parse(arguments);
         } else if (doesTriggerSameCommand(commandWord, EditCommand.DEFAULT_COMMAND_WORD)) {
@@ -647,6 +666,12 @@ public class ListCommandParser {
         }
         return parameterKeys;
     }
+}
+
+
+
+
+
 ```
 ###### \java\seedu\doist\logic\parser\RemoveAliasCommandParser.java
 ``` java
@@ -673,7 +698,7 @@ public class RemoveAliasCommandParser {
             if ("".equals(preamble)) {
                 throw new IllegalValueException(MESSAGE_ALIAS_NOT_SPECIFIED);
             }
-            if (!preamble.matches("[a-zA-Z_]+")) {
+            if (!preamble.matches("[a-zA-Z_]+")) {  // aliases only contain alphabets or underscores
                 throw new IllegalValueException(String.format(MESSAGE_ALIAS_FORMAT_INVALID,
                                                 RemoveAliasCommand.MESSAGE_USAGE));
             }
@@ -794,6 +819,20 @@ public class RemoveAliasCommandParser {
         raise(new AliasListMapChangedEvent(aliasListMap));
     }
 }
+```
+###### \java\seedu\doist\model\Model.java
+``` java
+    //========== handle undo and re-do operation =================================================
+    void saveCurrentToHistory();
+
+    /** Set the current displayed task list to the previous one stored in the history */
+    boolean recoverPreviousTodoList();
+
+    /** Set the current displayed task list to the next one stored in the history */
+    boolean recoverNextTodoList();
+}
+
+
 ```
 ###### \java\seedu\doist\model\ModelManager.java
 ``` java
