Collate some tests

--- a/collated/test/A0147620L.md
+++ b/collated/test/A0147620L.md
@@ -47,6 +47,133 @@ public class CommandHistoryTest extends DoistGUITest {
     }
 }
 ```
+###### \java\guitests\EditCommandTest.java
+``` java
+    @Test
+    public void edit_allFieldsSpecified_success() throws Exception {
+        String detailsToEdit = "Buy mangoes \\under groceries \\from \\to \\as normal";
+        int todoListIndex = 1;
+
+        TestTask editedTask = new TaskBuilder().withName("Buy mangoes").
+                withTags("groceries").withPriority("normal").build();
+        assertEditSuccess(todoListIndex, todoListIndex, detailsToEdit, editedTask);
+    }
+
+    @Test
+    public void edit_notAllFieldsSpecified_success() throws Exception {
+        String detailsToEdit = "\\as very important";
+        int todoListIndex = 2;
+
+        TestTask taskToEdit = expectedTasks[todoListIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).withPriority("very important").build();
+
+        assertEditSuccess(todoListIndex, todoListIndex, detailsToEdit, editedTask);
+    }
+
+    @Test
+    public void edit_clearDates_success() throws Exception {
+        String detailsToEdit = "\\by";
+        int todoListIndex = 1;
+
+        TestTask taskToEdit = expectedTasks[todoListIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).withDates(null, null).build();
+
+        assertEditSuccess(todoListIndex, todoListIndex, detailsToEdit, editedTask);
+    }
+
+    @Test
+    public void edit_clearTags_success() throws Exception {
+        String detailsToEdit = "\\under";
+        int todoListIndex = 3;
+
+        TestTask taskToEdit = expectedTasks[todoListIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).withTags().build();
+        assertEditSuccess(todoListIndex, todoListIndex, detailsToEdit, editedTask);
+    }
+
+    @Test
+    public void edit_findThenEdit_success() throws Exception {
+        commandBox.runCommand("find math");
+
+        String detailsToEdit = "Complete chemistry homework";
+        int filteredTaskListIndex = 1;
+        int todoListIndex = 3;
+
+        TestTask taskToEdit = expectedTasks[todoListIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).withName("Complete chemistry homework").build();
+        assertEditSuccess(filteredTaskListIndex, todoListIndex, detailsToEdit, editedTask, true);
+    }
+```
+###### \java\guitests\EditCommandTest.java
+``` java
+    @Test
+    public void edit_invalidDateFormat_failure() {
+        commandBox.runCommand("edit 1 \\from today \\by tomorrow");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand("edit 1 \\from today");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
+    }
+
+    @Test
+    public void edit_invalidDates_failure() {
+        commandBox.runCommand("edit 1 \\from tomorrow \\to today");
+        assertResultMessage(MESSAGE_INVALID_DATES);
+
+        //Date that can't be parsed
+        commandBox.runCommand("edit 1 \\by tomr");
+        assertResultMessage(MESSAGE_INVALID_DATES);
+
+    }
+
+```
+###### \java\guitests\FindCommandTest.java
+``` java
+public class FindCommandTest extends DoistGUITest {
+
+    @Test
+    public void find_nonEmptyList() {
+        assertFindResult("find Apple"); // no results
+        assertFindResult("find homework", td.homework); // one results
+
+        //find after deleting one result
+        commandBox.runCommand("delete 1");
+        assertFindResult("find homework");
+    }
+
+    @Test
+    public void find_emptyList() {
+        commandBox.runCommand("clear");
+        assertFindResult("find Milk"); // no results
+    }
+
+    @Test
+    public void find_invalidCommand_fail() {
+        commandBox.runCommand("findmilk");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+
+    @Test
+    public void find_nearMatch() {
+        assertFindResult("find mth homework", td.homework);
+        assertFindResult("find chemistry assnment", td.school);
+    }
+
+    @Test
+    public void find_caseInsensitive() {
+        assertFindResult("find buy new clock", td.shopping);
+        assertFindResult("find do Laundry", td.laundry);
+    }
+
+    private void assertFindResult(String command, TestTask... expectedHits) {
+        commandBox.runCommand(command);
+        assertListSize(expectedHits.length);
+        assertResultMessage(expectedHits.length + " tasks listed!");
+        assertTrue(taskListPanel.isListMatching(expectedHits));
+    }
+
+}
+```
 ###### \java\guitests\ListCommandTest.java
 ``` java
     @Test
